--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -105,7 +105,7 @@ width: $section_width;
   min-width: 340px;
   width: $section_width;
   margin-bottom: 70px;
-
+  margin: 35px;
 }
 
 .list{
@@ -150,8 +150,6 @@ width: $section_width;
     width: 100%;
     height: 100%;
     display: flex;
-  
-    
   }
    .editSectionA{ 
     
@@ -163,6 +161,7 @@ width: $section_width;
      
   }
   .editSectionD{ 
+
      
   }
 
