--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,9 +21,17 @@ $nthChildEvenColor: rgba(218, 218, 218, 0.946);
 
 }
 #sendMsgButton{
-  position: absolute;
-  right: 5%;
-  bottom: 2%;
+  position:fixed;
+  right: 3%;
+  bottom: 3%;
+  opacity: 0.7;
+  height:15%;
+  z-index: $foregroundIndex;
+  &:hover{
+    opacity: 1;
+    transform: scale(1.2);
+    transition-duration: 1s;
+  }
 }
 #msgModalBody{
   background-image: url("../images/whatsappBackground-Classic.png");
@@ -98,22 +106,21 @@ width: $section_width;
 }
 
   .profilePic{
-    height: 175px;
-    width: 175px;
+  
+    max-height: 175px;
     border-radius: 50%;
     background-color: rgb(128, 128, 128);
     box-shadow: 2px 2px 4px #3f3f3f83 ;
     z-index: $middlegroundIndex;
-    // position: absolute;
-    // top: 51px;
     left: 50%;
-    text-align: center;
     transform: translate(-50%);
+   ;
     &:hover{
-      height: 195px;
-      width: 195px;
-      cursor: pointer;
-      transition-duration: 1s;
+         transform: scale(1.2); 
+        //  transform: translate(-60%);
+         transition-duration: 1s;
+         cursor: pointer;
+    
     }
   }
 
