made the nav component more efficient

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -44,7 +44,7 @@ width: 100%;
 z-index: $foregroundIndex;
 display: flex;
 justify-content: flex-end;
-// background-color: rgba(72, 72, 72, 0.102) ;
+background-color: rgba(72, 72, 72, 0.102) ;
 
   #navBar{
     width: 100%;
